// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "loading": false,
  "points": "0.000",
  "transactions": Array [],
  "uPoints": "0.000",
}
`;

exports[`2- fetchAct 1`] = `
Object {
  "loading": true,
  "points": "0.000",
  "transactions": Array [],
  "uPoints": "0.000",
}
`;

exports[`3- fetched 1`] = `
Object {
  "loading": false,
  "points": "1.000",
  "transactions": Array [
    Object {
      "amount": "0.250",
      "created": "2020-08-17T12:52:16.737322+02:00",
      "id": 5150947,
      "memo": null,
      "receiver": null,
      "sender": null,
      "type": 10,
    },
    Object {
      "amount": "0.750",
      "created": "2020-08-17T10:01:22.094361+02:00",
      "id": 5149418,
      "memo": null,
      "receiver": null,
      "sender": null,
      "type": 120,
    },
  ],
  "uPoints": "2.000",
}
`;

exports[`4- resetAct 1`] = `
Object {
  "loading": false,
  "points": "0.000",
  "transactions": Array [],
  "uPoints": "0.000",
}
`;
